Frontend Fab added. layout bug fixed

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -2,9 +2,18 @@
 @import "../../node_modules/bootstrap-sass/assets/stylesheets/bootstrap";
 
 $app-bg : #f2f2f2;
+$app-border : #dedede;
 $top-menu-bg : #e8e8e8;
 $top-menu-active : #f7f7f7;
 $black : #333333;
+
+@mixin card-1 {
+  box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+}
+
+@mixin card-2 {
+  box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23)
+}
 
 #butter-app {
 
@@ -25,6 +34,7 @@ $black : #333333;
     width:100%;
     margin-top: 20px;
     background: $app-bg;
+    border: 1px solid $app-border;
   }
 
   .header-info {
@@ -54,7 +64,7 @@ $black : #333333;
     color: white;
     padding-bottom: 40px;
 
-    h1 {
+    .text {
       font-size: 25px;
       text-transform: uppercase;
       font-weight: 900;
@@ -98,6 +108,27 @@ $black : #333333;
       padding: 20px 25px;
       margin-top: -30px;
       margin-bottom: 30px;
+      border-radius: 2px;
+      @include card-1;
+      min-height: 300px
+    }
+
+    .actions {
+
+      .fab {
+        display: block;
+        background: #455A64;
+        padding: 12px;
+        border-radius: 100%;
+        @include card-2;
+        width: 48px;
+        margin: -24px auto 0;
+
+        i {
+          vertical-align: middle;
+          color: white !important;
+        }
+      }
     }
   }
 
